tests/invalid/pack_index_from_size_requires_subtraction.wio
type BadLast<Ts...> = Ts[Ts.size - 0usize];

fn Entry() -> i32 {
    return 0;
}
